Final project initial restructuring cont

--- a/report.tex
+++ b/report.tex
@@ -643,16 +643,10 @@ The following lines demonstrate the proof tree demonstrates the above steps in H
 
 \section{Project}
 
-The final project I have created goes into the variety of methods with which Haskell allows the user to create and manipulate infinite lists. My project is centered around mathematical patterns, with functions that generate various patterns as lists and other functions that can then manipulate them.
+The final project I have created goes into the variety of methods with which Haskell allows the user to create and manipulate infinite lists. These methods are demonstrated by implementing the same 11 functions in 5 different ways. These functions generate mathematical patterns as lists and also perform various forms of list manipulation between two lists.
 
 \subsection{Specification}
-My project uses infinite lists in Haskell in order to generate lists of variable size and manipulate them. There are a variety of sequences in math similar to the Fibonacci sequence, and I will implement them as separate functions. The sequences being implemented will be arithmetic, geometric, triangular, square, cube, and Fibonacci.
-
-\medskip\noindent
-Triangle, cube, square, and Fibonacci work by taking in 1 integer number and generating a list of the sequence with the length of the given integer. For example, (fib 5) generates a list containing the first 5 Fibonacci numbers. Arithmetic and geometric take in 3 integer numbers. The first integer works the same as the other sequences, where it dictates the list's length. The 2nd number is the first entry of the list and the 3rd number is the number added to each entry. For example, (arit 3 1 6) produce the list [1, 7, 13]. In geometric, the 2nd number works the same but the 3rd number is the number multiplied against the given value to continue the list. For example, (geo 3 1 6) produces the list [1, 6, 36].
-
-\medskip\noindent
-These lists can have mathematical operations performed between them, which will result in a new list. The available operations are addition, subtraction, multiplication, and integer division. When performing mathematical operations between lists of different lengths, the resulting list will be the length of the longer list. The shorter list will be extended with 0 values to fill it out to match the length of the longer list. For example, adding the lists [2, 4, 8, 16] and the list [1, 2, 3] is the same as adding the lists [2, 4, 8, 16] and [1, 2, 3, 0], resulting in the list [3, 6, 11, 16].
+Placeholder
 
 \subsection{Prototype}
 
